// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OverflowSet snapshot tests basicSnapshot 1`] = `
<div
  class=
      ms-OverflowSet
      {
        display: flex;
        flex-wrap: nowrap;
        position: relative;
      }
  role="group"
/>
`;

exports[`OverflowSet snapshot tests snapshot with classname 1`] = `
<div
  class=
      ms-OverflowSet
      foobar
      {
        display: flex;
        flex-wrap: nowrap;
        position: relative;
      }
  role="group"
/>
`;

exports[`OverflowSet snapshot tests snapshot with classname and vertical layout 1`] = `
<div
  class=
      ms-OverflowSet
      foobar
      {
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        position: relative;
      }
  role="group"
/>
`;
